--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rudeysh-flags",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Lots and lots of flags",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,7 +15,7 @@
     "url": "https://github.com/RudeySH/flags/issues"
   },
   "homepage": "https://github.com/RudeySH/flags#readme",
-  "dependencies": {
+  "devDependencies": {
     "svgo": "^2.3.0"
   }
 }
