Add script to generate scaled PNG flags
Leave out package-lock.json as requested.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/RudeySH/flags#readme",
   "dependencies": {
-    "jsdom": "^20.0.0"
+    "jsdom": "^20.0.0",
+    "sharp": "^0.31.0"
   }
 }
